--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    android:background="@color/teal_700"
+    android:background="@color/gray"
     tools:context=".ui.fragments.ProfileFragment">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
