--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="gray">#A5A8A8</color>
     <color name="black">#FF000000</color>
     <color name="blue">#2546AA</color>
     <color name="red">#B80F0F</color>
