--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -12,12 +12,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/et_edit_title"
+        app:layout_constraintBottom_toTopOf="@id/et_title"
         />
 
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/et_edit_title"
+        android:id="@+id/et_title"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:layout_marginTop="16dp"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@id/view" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/et_edit_description"
+        android:id="@+id/et_description"
         android:layout_width="match_parent"
         android:layout_height="128dp"
         android:layout_marginTop="16dp"
@@ -46,7 +46,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_edit_title" />
+        app:layout_constraintTop_toBottomOf="@+id/et_title" />
 
 
     <com.google.android.material.button.MaterialButton
@@ -57,7 +57,7 @@
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_edit_description"
+        app:layout_constraintTop_toBottomOf="@id/et_description"
         app:layout_constraintBottom_toBottomOf="parent"
          />
 
