--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,11 +31,11 @@
         android:label="List"
         tools:layout="@layout/fragment_list" >
         <action
-            android:id="@+id/action_listFragment_to_composeFragment"
-            app:destination="@id/composeFragment" />
-        <action
             android:id="@+id/action_listFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
+        <action
+            android:id="@+id/action_listFragment_to_composeFragment"
+            app:destination="@id/composeFragment" />
         <action
             android:id="@+id/action_listFragment_to_profileFragment"
             app:destination="@id/profileFragment" />
@@ -57,6 +57,9 @@
         <action
             android:id="@+id/action_detailFragment_to_editFragment"
             app:destination="@id/editFragment" />
+        <argument
+            android:name="note"
+            app:argType="com.example.notizen.data.model.Note" />
 <!--        <argument-->
 <!--            android:name="currentRecipe"-->
 <!--            app:argType="com.example.notizen.data.model.Recipe" />-->
@@ -69,9 +72,9 @@
         <action
             android:id="@+id/action_editFragment_to_listFragment"
             app:destination="@id/listFragment" />
-<!--        <argument-->
-<!--            android:name="currentRecipe"-->
-<!--            app:argType="com.example.notizen.data.model.Recipe" />-->
+        <argument
+            android:name="note"
+            app:argType="com.example.notizen.data.model.Note" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
